--- a/python/core/auto_generated/qgis.sip.in
+++ b/python/core/auto_generated/qgis.sip.in
@@ -3347,6 +3347,14 @@ The development version
       ConstantDensity
     };
 
+    enum class StacObjectType
+    {
+      Unknown,
+      Catalog,
+      Collection,
+      Item,
+    };
+
     static const double DEFAULT_SEARCH_RADIUS_MM;
 
     static const float DEFAULT_MAPTOPIXEL_THRESHOLD;
